Fixing quick shop, very dirty important hack, but don't want to mess around with Dawn CSS too much as we want to keep basic utility, later I should consider replacing the overrides with Tailiwnd quick-shop overrides, but it works for now

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1124,10 +1124,6 @@ video {
   margin-top: auto !important;
 }
 
-._mt-5 {
-  margin-top: 1.25rem !important;
-}
-
 ._box-border {
   box-sizing: border-box !important;
 }
@@ -1276,16 +1272,12 @@ video {
   min-height: 2rem !important;
 }
 
-._min-h-\[280px\] {
-  min-height: 280px !important;
-}
-
-._min-h-\[200px\] {
-  min-height: 200px !important;
-}
-
 ._min-h-\[226px\] {
   min-height: 226px !important;
+}
+
+._min-h-\[280px\] {
+  min-height: 280px !important;
 }
 
 ._w-1\/2 {
@@ -1753,11 +1745,6 @@ video {
   border-color: rgb(255 255 255 / 0.5) !important;
 }
 
-._border-emerald-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(16 185 129 / var(--tw-border-opacity, 1)) !important;
-}
-
 ._bg-\[\#FCB52D\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(252 181 45 / var(--tw-bg-opacity, 1)) !important;
@@ -2093,6 +2080,11 @@ video {
   font-family: var(--font-heading-family-italic) !important;
 }
 
+._text-2\.5xl {
+  font-size: 36px !important;
+  line-height: 1 !important;
+}
+
 ._text-2xl {
   font-size: 24px !important;
   line-height: auto !important;
@@ -2154,11 +2146,6 @@ video {
 ._text-xs {
   font-size: 10px !important;
   line-height: auto !important;
-}
-
-._text-2\.5xl {
-  font-size: 36px !important;
-  line-height: 1 !important;
 }
 
 ._font-medium {
@@ -2767,8 +2754,16 @@ video {
     grid-column: span 9 / span 9 !important;
   }
 
+  .md\:_mb-0 {
+    margin-bottom: 0px !important;
+  }
+
   .md\:_mb-1 {
     margin-bottom: 0.25rem !important;
+  }
+
+  .md\:_mb-12 {
+    margin-bottom: 3rem !important;
   }
 
   .md\:_mb-4 {
@@ -2785,14 +2780,6 @@ video {
 
   .md\:_mt-8 {
     margin-top: 2rem !important;
-  }
-
-  .md\:_mb-12 {
-    margin-bottom: 3rem !important;
-  }
-
-  .md\:_mb-0 {
-    margin-bottom: 0px !important;
   }
 
   .md\:_block {
@@ -2859,24 +2846,16 @@ video {
     max-width: 340px !important;
   }
 
-  .md\:_max-w-\[70\%\] {
-    max-width: 70% !important;
+  .md\:_max-w-\[40\%\] {
+    max-width: 40% !important;
   }
 
   .md\:_max-w-\[50\%\] {
     max-width: 50% !important;
   }
 
-  .md\:_max-w-\[38\%\] {
-    max-width: 38% !important;
-  }
-
-  .md\:_max-w-\[42\%\] {
-    max-width: 42% !important;
-  }
-
-  .md\:_max-w-\[40\%\] {
-    max-width: 40% !important;
+  .md\:_max-w-\[70\%\] {
+    max-width: 70% !important;
   }
 
   .md\:_grid-cols-10 {
@@ -2921,6 +2900,10 @@ video {
 
   .md\:_gap-7 {
     gap: 1.75rem !important;
+  }
+
+  .md\:_gap-4 {
+    gap: 1rem !important;
   }
 
   .md\:_bg-brand-light {
@@ -3006,6 +2989,14 @@ video {
 
   .md\:_pt-8 {
     padding-top: 2rem !important;
+  }
+
+  .md\:_pl-12 {
+    padding-left: 3rem !important;
+  }
+
+  .md\:_pl-16 {
+    padding-left: 4rem !important;
   }
 
   .md\:_text-2\.5xl {
@@ -3127,6 +3118,18 @@ video {
   bottom: 0px !important;
 }
 
+.quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:_w-full {
+  width: 100% !important;
+}
+
+.quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:_max-w-full {
+  max-width: 100% !important;
+}
+
+.quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:_flex-col {
+  flex-direction: column !important;
+}
+
 .quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:_bg-brand-light {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
@@ -3135,4 +3138,18 @@ video {
 .quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:_py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
+}
+
+@media (min-width: 750px) {
+  .quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:md\:_w-full {
+    width: 100% !important;
+  }
+
+  .quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:md\:_flex-col {
+    flex-direction: column !important;
+  }
+
+  .quick-shop-drawer .\[\.quick-shop-drawer_\&\]\:md\:_pl-0 {
+    padding-left: 0px !important;
+  }
 }
